@@ -21,19 +21,28 @@
 package eu.openanalytics.phaedra.plateservice.service;
 
 import eu.openanalytics.phaedra.metadataservice.client.MetadataServiceClient;
+import eu.openanalytics.phaedra.metadataservice.client.MetadataServiceGraphQlClient;
+import eu.openanalytics.phaedra.metadataservice.dto.MetadataDTO;
+import eu.openanalytics.phaedra.metadataservice.dto.PropertyDTO;
+import eu.openanalytics.phaedra.metadataservice.dto.TagDTO;
+import eu.openanalytics.phaedra.metadataservice.enumeration.ObjectClass;
+import eu.openanalytics.phaedra.plateservice.dto.ExperimentDTO;
 import eu.openanalytics.phaedra.plateservice.dto.ProjectDTO;
 import eu.openanalytics.phaedra.plateservice.enumeration.ProjectAccessLevel;
 import eu.openanalytics.phaedra.plateservice.model.Project;
 import eu.openanalytics.phaedra.plateservice.repository.ProjectRepository;
 import eu.openanalytics.phaedra.util.auth.IAuthorizationService;
+import java.util.ArrayList;
+import java.util.Date;
+import java.util.HashMap;
+import java.util.List;
+import java.util.Map;
+import java.util.Optional;
+import java.util.stream.Collectors;
+import org.apache.commons.collections4.CollectionUtils;
 import org.modelmapper.Conditions;
 import org.modelmapper.ModelMapper;
 import org.springframework.stereotype.Service;
-
-import java.util.Date;
-import java.util.List;
-import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Service
 public class ProjectService {
@@ -45,18 +54,22 @@ public class ProjectService {
 	private final ProjectAccessService projectAccessService;
 	private final IAuthorizationService authService;
 
-	private final MetadataServiceClient metadataServiceClient;
+	private final MetadataServiceGraphQlClient metadataServiceGraphQlClient;
 
 
-	public ProjectService(ProjectRepository projectRepository, ExperimentService experimentService,
-						  ProjectAccessService projectAccessService, IAuthorizationService authService, MetadataServiceClient metadataServiceClient) {
+	public ProjectService(
+			ProjectRepository projectRepository,
+			ExperimentService experimentService,
+			ProjectAccessService projectAccessService,
+			IAuthorizationService authService,
+      MetadataServiceGraphQlClient metadataServiceGraphQlClient) {
 
 		this.projectRepository = projectRepository;
 		this.experimentService = experimentService;
 		this.projectAccessService = projectAccessService;
 		this.authService = authService;
-		this.metadataServiceClient = metadataServiceClient;
-	}
+    this.metadataServiceGraphQlClient = metadataServiceGraphQlClient;
+  }
 
 	public ProjectDTO createProject(ProjectDTO projectDTO) {
 		projectAccessService.checkCanCreateProjects();
@@ -85,16 +98,25 @@ public class ProjectService {
 
 	public void deleteProject(long projectId) {
 		projectAccessService.checkAccessLevel(projectId, ProjectAccessLevel.Admin);
-//		experimentService.deleteExperimentsByProjectId(projectId);
 		projectRepository.deleteById(projectId);
 	}
 
-	public List<ProjectDTO> getAllProjects() {
-		List<Project> projects = (List<Project>) projectRepository.findAll();
-		return projects.stream()
+	public List<ProjectDTO> getProjects(List<Long> projectIds) {
+		List<Project> projects = new ArrayList<>();
+		if (CollectionUtils.isEmpty(projectIds)) {
+			projects.addAll((List<Project>) projectRepository.findAll());
+		} else {
+			projects.addAll((List<Project>) projectRepository.findAllById(projectIds));
+		}
+
+		List<ProjectDTO> projectDTOs = projects.stream()
 				.filter(p -> projectAccessService.hasAccessLevel(p.getId(), ProjectAccessLevel.Read))
 				.map(this::mapToProjectDTO)
-				.collect(Collectors.toList());
+				.toList();
+
+		enrichWithMetadata(projectDTOs);
+
+		return projectDTOs;
 	}
 
 	public List<ProjectDTO> getNMostRecentlyUpdatedProjects(int n) {
@@ -117,5 +139,31 @@ public class ProjectService {
 		ProjectDTO projectDTO = new ProjectDTO();
 		modelMapper.typeMap(Project.class, ProjectDTO.class).map(project, projectDTO);
 		return projectDTO;
+	}
+
+	private void enrichWithMetadata(List<ProjectDTO> projects) {
+		if (CollectionUtils.isNotEmpty(projects)) {
+			// Create a map of project ID to ProjectDTO for quick lookup
+			Map<Long, ProjectDTO> projectMap = new HashMap<>();
+			List<Long> projectIds = new ArrayList<>(projects.size());
+			for (ProjectDTO project : projects) {
+				projectMap.put(project.getId(), project);
+				projectIds.add(project.getId());
+			}
+
+			// Retrieve the metadata using the list of project IDs
+			List<MetadataDTO> experimentsMetadata = metadataServiceGraphQlClient.getMetadata(projectIds, ObjectClass.PROJECT);
+			for (MetadataDTO metadata : experimentsMetadata) {
+				ProjectDTO project = projectMap.get(metadata.getObjectId());
+				if (project != null) {
+					project.setTags(metadata.getTags().stream().map(TagDTO::getTag).collect(Collectors.toList()));
+					List<eu.openanalytics.phaedra.plateservice.dto.PropertyDTO> propertyDTOs = new ArrayList<>(metadata.getProperties().size());
+					for (eu.openanalytics.phaedra.metadataservice.dto.PropertyDTO property : metadata.getProperties()) {
+						propertyDTOs.add(new eu.openanalytics.phaedra.plateservice.dto.PropertyDTO(property.getPropertyName(), property.getPropertyValue()));
+					}
+					project.setProperties(propertyDTOs);
+				}
+			}
+		}
 	}
 }
